style(alacritty): improve cursor visibility and color consistency
Updates Alacritty theme generator to enhance cursor styling:
- Use theme-specific cursor colors (light mode: syntax.statement, dark mode: terminal.yellow)
- Replace terminal.black with palette.bg.core for cursor text background
- Regenerate all 78 theme files (13 variants × 6 modes) with updated cursor colors

This improves cursor visibility across all themes and ensures better color consistency with each palette variant.

--- a/extras/alacritty/themes/dark/oasis_rose_dark.toml
+++ b/extras/alacritty/themes/dark/oasis_rose_dark.toml
@@ -7,19 +7,19 @@ background = '#301828'
 foreground = '#EDD5E7'
 
 [colors.selection]
-background = '#5A3824'
+background = '#523A4B'
 text = '#EDD5E7'
 
 [colors.cursor]
 cursor = '#F0E68C'
-text = '#000000'
+text = '#301828'
 
 [colors.vi_mode_cursor]
-cursor = '#FFA247'
-text = '#000000'
+cursor = '#F8B471'
+text = '#301828'
 
 [colors.normal]
-black   = '#000000'
+black   = '#101010'
 red     = '#D06666'
 green   = '#53D390'
 yellow  = '#F0E68C'
@@ -29,10 +29,10 @@ cyan    = '#5ABAAE'
 white   = '#DDDBD5'
 
 [colors.bright]
-black   = '#666666'
+black   = '#504641'
 red     = '#FFA0A0'
 green   = '#96EA7F'
-yellow  = '#FFA247'
+yellow  = '#F8B471'
 blue    = '#87CEEB'
 magenta = '#D2ADFF'
 cyan    = '#8FD1C7'
