--- a/extras/alacritty/themes/light/1/oasis_dune_light_1.toml
+++ b/extras/alacritty/themes/light/1/oasis_dune_light_1.toml
@@ -11,12 +11,12 @@ background = '#e8e4d8'
 text = '#58554c'
 
 [colors.cursor]
-cursor = '#696323'
-text = '#555555'
+cursor = '#6d6219'
+text = '#f9f8f5'
 
 [colors.vi_mode_cursor]
-cursor = '#93500e'
-text = '#555555'
+cursor = '#905215'
+text = '#f9f8f5'
 
 [colors.normal]
 black   = '#555555'
@@ -29,10 +29,10 @@ cyan    = '#376a63'
 white   = '#58554d'
 
 [colors.bright]
-black   = '#555555'
+black   = '#5c544d'
 red     = '#c21414'
 green   = '#366e27'
-yellow  = '#93500e'
+yellow  = '#905215'
 blue    = '#266884'
 magenta = '#7f32de'
 cyan    = '#366a62'
