--- a/extras/alacritty/themes/light/1/oasis_mirage_light_1.toml
+++ b/extras/alacritty/themes/light/1/oasis_mirage_light_1.toml
@@ -11,12 +11,12 @@ background = '#dde9e3'
 text = '#455b5b'
 
 [colors.cursor]
-cursor = '#6b6424'
-text = '#575757'
+cursor = '#356c63'
+text = '#f9fbfa'
 
 [colors.vi_mode_cursor]
-cursor = '#95510e'
-text = '#575757'
+cursor = '#925416'
+text = '#f9fbfa'
 
 [colors.normal]
 black   = '#575757'
@@ -29,10 +29,10 @@ cyan    = '#386c64'
 white   = '#59564e'
 
 [colors.bright]
-black   = '#575757'
+black   = '#5e554f'
 red     = '#c51414'
 green   = '#376f28'
-yellow  = '#95510e'
+yellow  = '#925416'
 blue    = '#266a86'
 magenta = '#8134de'
 cyan    = '#366c63'
