--- a/extras/alacritty/themes/light/1/oasis_rose_light_1.toml
+++ b/extras/alacritty/themes/light/1/oasis_rose_light_1.toml
@@ -11,12 +11,12 @@ background = '#e9dde9'
 text = '#694e63'
 
 [colors.cursor]
-cursor = '#6a6423'
-text = '#565656'
+cursor = '#c3151c'
+text = '#fbf9fb'
 
 [colors.vi_mode_cursor]
-cursor = '#95510e'
-text = '#565656'
+cursor = '#915315'
+text = '#fbf9fb'
 
 [colors.normal]
 black   = '#565656'
@@ -29,10 +29,10 @@ cyan    = '#376b64'
 white   = '#59564d'
 
 [colors.bright]
-black   = '#565656'
+black   = '#5d554e'
 red     = '#c41414'
 green   = '#376f28'
-yellow  = '#95510e'
+yellow  = '#915315'
 blue    = '#266985'
 magenta = '#8033de'
 cyan    = '#366b63'
