--- a/extras/alacritty/themes/light/1/oasis_sol_light_1.toml
+++ b/extras/alacritty/themes/light/1/oasis_sol_light_1.toml
@@ -11,12 +11,12 @@ background = '#e8d8d8'
 text = '#814236'
 
 [colors.cursor]
-cursor = '#686223'
-text = '#545454'
+cursor = '#b6282c'
+text = '#f9f5f5'
 
 [colors.vi_mode_cursor]
-cursor = '#914f0e'
-text = '#545454'
+cursor = '#8e5115'
+text = '#f9f5f5'
 
 [colors.normal]
 black   = '#545454'
@@ -29,10 +29,10 @@ cyan    = '#366961'
 white   = '#57544c'
 
 [colors.bright]
-black   = '#545454'
+black   = '#5b534c'
 red     = '#c01313'
 green   = '#366c27'
-yellow  = '#914f0e'
+yellow  = '#8e5115'
 blue    = '#256782'
 magenta = '#7e2fdd'
 cyan    = '#356961'
