--- a/extras/alacritty/themes/light/1/oasis_twilight_light_1.toml
+++ b/extras/alacritty/themes/light/1/oasis_twilight_light_1.toml
@@ -11,12 +11,12 @@ background = '#dddde9'
 text = '#5b4f7e'
 
 [colors.cursor]
-cursor = '#6a6323'
-text = '#565656'
+cursor = '#8724e7'
+text = '#f9f9fb'
 
 [colors.vi_mode_cursor]
-cursor = '#94510e'
-text = '#565656'
+cursor = '#905315'
+text = '#f9f9fb'
 
 [colors.normal]
 black   = '#565656'
@@ -29,10 +29,10 @@ cyan    = '#376b63'
 white   = '#59564d'
 
 [colors.bright]
-black   = '#565656'
+black   = '#5d544e'
 red     = '#c41414'
 green   = '#376e28'
-yellow  = '#94510e'
+yellow  = '#905315'
 blue    = '#266985'
 magenta = '#8033de'
 cyan    = '#366b63'
