--- a/extras/alacritty/themes/light/2/oasis_cactus_light_2.toml
+++ b/extras/alacritty/themes/light/2/oasis_cactus_light_2.toml
@@ -11,12 +11,12 @@ background = '#cfe8da'
 text = '#44584c'
 
 [colors.cursor]
-cursor = '#686123'
-text = '#535353'
+cursor = '#3e6940'
+text = '#eef7f2'
 
 [colors.vi_mode_cursor]
-cursor = '#904f0e'
-text = '#535353'
+cursor = '#8d5115'
+text = '#eef7f2'
 
 [colors.normal]
 black   = '#535353'
@@ -29,10 +29,10 @@ cyan    = '#366863'
 white   = '#56534b'
 
 [colors.bright]
-black   = '#535353'
+black   = '#5a524c'
 red     = '#bf1313'
 green   = '#366b27'
-yellow  = '#904f0e'
+yellow  = '#8d5115'
 blue    = '#256681'
 magenta = '#7d2fdd'
 cyan    = '#356861'
