--- a/extras/alacritty/themes/light/2/oasis_mirage_light_2.toml
+++ b/extras/alacritty/themes/light/2/oasis_mirage_light_2.toml
@@ -11,12 +11,12 @@ background = '#c8eeee'
 text = '#425858'
 
 [colors.cursor]
-cursor = '#686123'
-text = '#545454'
+cursor = '#356962'
+text = '#ebf9f9'
 
 [colors.vi_mode_cursor]
-cursor = '#924f0e'
-text = '#545454'
+cursor = '#8e5115'
+text = '#ebf9f9'
 
 [colors.normal]
 black   = '#545454'
@@ -29,10 +29,10 @@ cyan    = '#366963'
 white   = '#57544b'
 
 [colors.bright]
-black   = '#545454'
+black   = '#5b534c'
 red     = '#c01313'
 green   = '#366d27'
-yellow  = '#924f0e'
+yellow  = '#8e5115'
 blue    = '#256782'
 magenta = '#7e30dd'
 cyan    = '#356961'
