--- a/extras/alacritty/themes/light/2/oasis_rose_light_2.toml
+++ b/extras/alacritty/themes/light/2/oasis_rose_light_2.toml
@@ -11,12 +11,12 @@ background = '#eec9e3'
 text = '#61495c'
 
 [colors.cursor]
-cursor = '#645e22'
-text = '#505050'
+cursor = '#b8141b'
+text = '#f9ecf5'
 
 [colors.vi_mode_cursor]
-cursor = '#8c4c0e'
-text = '#505050'
+cursor = '#884e14'
+text = '#f9ecf5'
 
 [colors.normal]
 black   = '#505050'
@@ -29,10 +29,10 @@ cyan    = '#34655f'
 white   = '#535048'
 
 [colors.bright]
-black   = '#505050'
+black   = '#574f49'
 red     = '#b91313'
 green   = '#346826'
-yellow  = '#8c4c0e'
+yellow  = '#884e14'
 blue    = '#24637d'
 magenta = '#7929dc'
 cyan    = '#33655e'
