--- a/extras/alacritty/themes/light/2/oasis_sol_light_2.toml
+++ b/extras/alacritty/themes/light/2/oasis_sol_light_2.toml
@@ -11,12 +11,12 @@ background = '#eecbc3'
 text = '#793e33'
 
 [colors.cursor]
-cursor = '#635c21'
-text = '#4f4f4f'
+cursor = '#ad262a'
+text = '#f8eae7'
 
 [colors.vi_mode_cursor]
-cursor = '#8a4b0d'
-text = '#4f4f4f'
+cursor = '#864d14'
+text = '#f8eae7'
 
 [colors.normal]
 black   = '#4f4f4f'
@@ -29,10 +29,10 @@ cyan    = '#33635e'
 white   = '#524f47'
 
 [colors.bright]
-black   = '#4f4f4f'
+black   = '#554d48'
 red     = '#b61212'
 green   = '#336625'
-yellow  = '#8a4b0d'
+yellow  = '#864d14'
 blue    = '#23627b'
 magenta = '#7826db'
 cyan    = '#33635c'
