--- a/extras/alacritty/themes/light/2/oasis_starlight_light_2.toml
+++ b/extras/alacritty/themes/light/2/oasis_starlight_light_2.toml
@@ -11,12 +11,12 @@ background = '#eee3c9'
 text = '#5b5341'
 
 [colors.cursor]
-cursor = '#686123'
-text = '#545454'
+cursor = '#1462a7'
+text = '#f9f5ec'
 
 [colors.vi_mode_cursor]
-cursor = '#914f0e'
-text = '#545454'
+cursor = '#8d5115'
+text = '#f9f5ec'
 
 [colors.normal]
 black   = '#545454'
@@ -29,10 +29,10 @@ cyan    = '#366863'
 white   = '#56544b'
 
 [colors.bright]
-black   = '#545454'
+black   = '#5a524c'
 red     = '#bf1313'
 green   = '#366c27'
-yellow  = '#914f0e'
+yellow  = '#8d5115'
 blue    = '#256781'
 magenta = '#7d2fdd'
 cyan    = '#356961'
