--- a/extras/alacritty/themes/light/2/oasis_twilight_light_2.toml
+++ b/extras/alacritty/themes/light/2/oasis_twilight_light_2.toml
@@ -11,12 +11,12 @@ background = '#d2c9ee'
 text = '#544975'
 
 [colors.cursor]
-cursor = '#635d21'
-text = '#4f4f4f'
+cursor = '#7f18e1'
+text = '#efecf9'
 
 [colors.vi_mode_cursor]
-cursor = '#8a4c0d'
-text = '#4f4f4f'
+cursor = '#874d14'
+text = '#efecf9'
 
 [colors.normal]
 black   = '#4f4f4f'
@@ -29,10 +29,10 @@ cyan    = '#33645e'
 white   = '#524f47'
 
 [colors.bright]
-black   = '#4f4f4f'
+black   = '#564e48'
 red     = '#b71212'
 green   = '#346725'
-yellow  = '#8a4c0d'
+yellow  = '#874d14'
 blue    = '#23627b'
 magenta = '#7827db'
 cyan    = '#33645c'
