--- a/extras/alacritty/themes/light/3/oasis_abyss_light_3.toml
+++ b/extras/alacritty/themes/light/3/oasis_abyss_light_3.toml
@@ -11,12 +11,12 @@ background = '#f0cead'
 text = '#524b43'
 
 [colors.cursor]
-cursor = '#605920'
-text = '#4c4c4c'
+cursor = '#aa2126'
+text = '#f7e5d4'
 
 [colors.vi_mode_cursor]
-cursor = '#85490d'
-text = '#4c4c4c'
+cursor = '#824a14'
+text = '#f7e5d4'
 
 [colors.normal]
 black   = '#4c4c4c'
@@ -29,10 +29,10 @@ cyan    = '#32605a'
 white   = '#4f4c44'
 
 [colors.bright]
-black   = '#4c4c4c'
+black   = '#524b45'
 red     = '#b01212'
 green   = '#326324'
-yellow  = '#85490d'
+yellow  = '#824a14'
 blue    = '#225f77'
 magenta = '#7423d6'
 cyan    = '#316059'
