--- a/extras/alacritty/themes/light/3/oasis_cactus_light_3.toml
+++ b/extras/alacritty/themes/light/3/oasis_cactus_light_3.toml
@@ -11,12 +11,12 @@ background = '#c1e1cf'
 text = '#405348'
 
 [colors.cursor]
-cursor = '#625c21'
-text = '#4e4e4e'
+cursor = '#3a643d'
+text = '#e0f0e7'
 
 [colors.vi_mode_cursor]
-cursor = '#894b0d'
-text = '#4e4e4e'
+cursor = '#864d14'
+text = '#e0f0e7'
 
 [colors.normal]
 black   = '#4e4e4e'
@@ -29,10 +29,10 @@ cyan    = '#33635d'
 white   = '#514e47'
 
 [colors.bright]
-black   = '#4e4e4e'
+black   = '#554d47'
 red     = '#b51212'
 green   = '#336625'
-yellow  = '#894b0d'
+yellow  = '#864d14'
 blue    = '#23617a'
 magenta = '#7725db'
 cyan    = '#32635c'
