--- a/extras/alacritty/themes/light/3/oasis_dune_light_3.toml
+++ b/extras/alacritty/themes/light/3/oasis_dune_light_3.toml
@@ -11,12 +11,12 @@ background = '#e9dfba'
 text = '#525047'
 
 [colors.cursor]
-cursor = '#645d21'
-text = '#505050'
+cursor = '#685c19'
+text = '#f4efdd'
 
 [colors.vi_mode_cursor]
-cursor = '#8b4c0e'
-text = '#505050'
+cursor = '#884e14'
+text = '#f4efdd'
 
 [colors.normal]
 black   = '#505050'
@@ -29,10 +29,10 @@ cyan    = '#34645e'
 white   = '#535048'
 
 [colors.bright]
-black   = '#505050'
+black   = '#574f49'
 red     = '#b81313'
 green   = '#346826'
-yellow  = '#8b4c0e'
+yellow  = '#884e14'
 blue    = '#23637c'
 magenta = '#7928dc'
 cyan    = '#33645d'
