--- a/extras/alacritty/themes/light/3/oasis_midnight_light_3.toml
+++ b/extras/alacritty/themes/light/3/oasis_midnight_light_3.toml
@@ -11,12 +11,12 @@ background = '#f0c8ad'
 text = '#524943'
 
 [colors.cursor]
-cursor = '#5e581f'
-text = '#4b4b4b'
+cursor = '#a52429'
+text = '#f7e2d4'
 
 [colors.vi_mode_cursor]
-cursor = '#83480d'
-text = '#4b4b4b'
+cursor = '#804913'
+text = '#f7e2d4'
 
 [colors.normal]
 black   = '#4b4b4b'
@@ -29,10 +29,10 @@ cyan    = '#315e59'
 white   = '#4e4b43'
 
 [colors.bright]
-black   = '#4b4b4b'
+black   = '#514a44'
 red     = '#ae1212'
 green   = '#316223'
-yellow  = '#83480d'
+yellow  = '#804913'
 blue    = '#215d75'
 magenta = '#7223d3'
 cyan    = '#305f58'
