--- a/extras/alacritty/themes/light/3/oasis_mirage_light_3.toml
+++ b/extras/alacritty/themes/light/3/oasis_mirage_light_3.toml
@@ -11,12 +11,12 @@ background = '#b7ebeb'
 text = '#405454'
 
 [colors.cursor]
-cursor = '#655e21'
-text = '#505050'
+cursor = '#32655d'
+text = '#dbf5f5'
 
 [colors.vi_mode_cursor]
-cursor = '#8c4d0e'
-text = '#505050'
+cursor = '#894e15'
+text = '#dbf5f5'
 
 [colors.normal]
 black   = '#505050'
@@ -29,10 +29,10 @@ cyan    = '#34655f'
 white   = '#535048'
 
 [colors.bright]
-black   = '#505050'
+black   = '#574f49'
 red     = '#b91313'
 green   = '#346926'
-yellow  = '#8c4d0e'
+yellow  = '#894e15'
 blue    = '#24647d'
 magenta = '#7929dc'
 cyan    = '#33655e'
