--- a/extras/alacritty/themes/light/3/oasis_night_light_3.toml
+++ b/extras/alacritty/themes/light/3/oasis_night_light_3.toml
@@ -11,12 +11,12 @@ background = '#dbca8f'
 text = '#52412d'
 
 [colors.cursor]
-cursor = '#57511d'
-text = '#444444'
+cursor = '#7c410d'
+text = '#e6dbb2'
 
 [colors.vi_mode_cursor]
-cursor = '#7a420c'
-text = '#444444'
+cursor = '#774412'
+text = '#e6dbb2'
 
 [colors.normal]
 black   = '#444444'
@@ -29,10 +29,10 @@ cyan    = '#2d5752'
 white   = '#47443d'
 
 [colors.bright]
-black   = '#444444'
+black   = '#4a433e'
 red     = '#a11010'
 green   = '#2d5a21'
-yellow  = '#7a420c'
+yellow  = '#774412'
 blue    = '#1f566c'
 magenta = '#6a20c4'
 cyan    = '#2c5851'
