--- a/extras/alacritty/themes/light/3/oasis_rose_light_3.toml
+++ b/extras/alacritty/themes/light/3/oasis_rose_light_3.toml
@@ -11,12 +11,12 @@ background = '#e9badd'
 text = '#594353'
 
 [colors.cursor]
-cursor = '#5d561f'
-text = '#494949'
+cursor = '#ab1318'
+text = '#f4ddee'
 
 [colors.vi_mode_cursor]
-cursor = '#81470d'
-text = '#494949'
+cursor = '#7e4813'
+text = '#f4ddee'
 
 [colors.normal]
 black   = '#494949'
@@ -29,10 +29,10 @@ cyan    = '#305d57'
 white   = '#4c4942'
 
 [colors.bright]
-black   = '#494949'
+black   = '#4f4843'
 red     = '#ab1111'
 green   = '#306023'
-yellow  = '#81470d'
+yellow  = '#7e4813'
 blue    = '#215c73'
 magenta = '#7022d0'
 cyan    = '#2f5d57'
