--- a/extras/alacritty/themes/light/3/oasis_starlight_light_3.toml
+++ b/extras/alacritty/themes/light/3/oasis_starlight_light_3.toml
@@ -11,12 +11,12 @@ background = '#e9dbba'
 text = '#564f3e'
 
 [colors.cursor]
-cursor = '#645d21'
-text = '#4f4f4f'
+cursor = '#135d9e'
+text = '#f4eddd'
 
 [colors.vi_mode_cursor]
-cursor = '#8a4b0e'
-text = '#4f4f4f'
+cursor = '#874d14'
+text = '#f4eddd'
 
 [colors.normal]
 black   = '#4f4f4f'
@@ -29,10 +29,10 @@ cyan    = '#34635d'
 white   = '#524f47'
 
 [colors.bright]
-black   = '#4f4f4f'
+black   = '#554e48'
 red     = '#b71212'
 green   = '#336725'
-yellow  = '#8a4b0e'
+yellow  = '#874d14'
 blue    = '#23627b'
 magenta = '#7826dc'
 cyan    = '#33645d'
