--- a/extras/alacritty/themes/light/3/oasis_twilight_light_3.toml
+++ b/extras/alacritty/themes/light/3/oasis_twilight_light_3.toml
@@ -11,12 +11,12 @@ background = '#c4bae9'
 text = '#4a4268'
 
 [colors.cursor]
-cursor = '#5b541e'
-text = '#474747'
+cursor = '#7416cd'
+text = '#e2ddf4'
 
 [colors.vi_mode_cursor]
-cursor = '#7e450c'
-text = '#474747'
+cursor = '#7b4612'
+text = '#e2ddf4'
 
 [colors.normal]
 black   = '#474747'
@@ -29,10 +29,10 @@ cyan    = '#2f5b55'
 white   = '#4a4740'
 
 [colors.bright]
-black   = '#474747'
+black   = '#4d4641'
 red     = '#a71111'
 green   = '#2f5e22'
-yellow  = '#7e450c'
+yellow  = '#7b4612'
 blue    = '#205970'
 magenta = '#6d21cb'
 cyan    = '#2e5b54'
