--- a/extras/alacritty/themes/light/4/oasis_abyss_light_4.toml
+++ b/extras/alacritty/themes/light/4/oasis_abyss_light_4.toml
@@ -11,12 +11,12 @@ background = '#eec5a0'
 text = '#4e473f'
 
 [colors.cursor]
-cursor = '#5b551f'
-text = '#484848'
+cursor = '#a22024'
+text = '#f5ddc7'
 
 [colors.vi_mode_cursor]
-cursor = '#7f450d'
-text = '#484848'
+cursor = '#7c4712'
+text = '#f5ddc7'
 
 [colors.normal]
 black   = '#484848'
@@ -29,10 +29,10 @@ cyan    = '#2f5b55'
 white   = '#4a4841'
 
 [colors.bright]
-black   = '#484848'
+black   = '#4e4642'
 red     = '#a91010'
 green   = '#305e23'
-yellow  = '#7f450d'
+yellow  = '#7c4712'
 blue    = '#205a71'
 magenta = '#6f21cd'
 cyan    = '#2f5c55'
