--- a/extras/alacritty/themes/light/4/oasis_desert_light_4.toml
+++ b/extras/alacritty/themes/light/4/oasis_desert_light_4.toml
@@ -11,12 +11,12 @@ background = '#eec9a0'
 text = '#564634'
 
 [colors.cursor]
-cursor = '#5c561f'
-text = '#494949'
+cursor = '#5e5517'
+text = '#f5dfc7'
 
 [colors.vi_mode_cursor]
-cursor = '#80460d'
-text = '#494949'
+cursor = '#7d4813'
+text = '#f5dfc7'
 
 [colors.normal]
 black   = '#494949'
@@ -29,10 +29,10 @@ cyan    = '#305c56'
 white   = '#4b4941'
 
 [colors.bright]
-black   = '#494949'
+black   = '#4f4742'
 red     = '#aa1010'
 green   = '#306023'
-yellow  = '#80460d'
+yellow  = '#7d4813'
 blue    = '#205b73'
 magenta = '#7021cf'
 cyan    = '#2f5d56'
