--- a/extras/alacritty/themes/light/4/oasis_dune_light_4.toml
+++ b/extras/alacritty/themes/light/4/oasis_dune_light_4.toml
@@ -11,12 +11,12 @@ background = '#e5d8ae'
 text = '#4f4d44'
 
 [colors.cursor]
-cursor = '#605a20'
-text = '#4c4c4c'
+cursor = '#635918'
+text = '#f0e9d1'
 
 [colors.vi_mode_cursor]
-cursor = '#86490d'
-text = '#4c4c4c'
+cursor = '#834b13'
+text = '#f0e9d1'
 
 [colors.normal]
 black   = '#4c4c4c'
@@ -29,10 +29,10 @@ cyan    = '#32615a'
 white   = '#4f4d45'
 
 [colors.bright]
-black   = '#4c4c4c'
+black   = '#544b46'
 red     = '#b21111'
 green   = '#326425'
-yellow  = '#86490d'
+yellow  = '#834b13'
 blue    = '#225f78'
 magenta = '#7523d8'
 cyan    = '#316159'
