--- a/extras/alacritty/themes/light/4/oasis_mirage_light_4.toml
+++ b/extras/alacritty/themes/light/4/oasis_mirage_light_4.toml
@@ -11,12 +11,12 @@ background = '#a7ecec'
 text = '#3e5252'
 
 [colors.cursor]
-cursor = '#625c21'
-text = '#4f4f4f'
+cursor = '#31635c'
+text = '#cdf4f4'
 
 [colors.vi_mode_cursor]
-cursor = '#894b0e'
-text = '#4f4f4f'
+cursor = '#864d14'
+text = '#cdf4f4'
 
 [colors.normal]
 black   = '#4f4f4f'
@@ -29,10 +29,10 @@ cyan    = '#33635c'
 white   = '#514f47'
 
 [colors.bright]
-black   = '#4f4f4f'
+black   = '#564d48'
 red     = '#b61212'
 green   = '#336625'
-yellow  = '#894b0e'
+yellow  = '#864d14'
 blue    = '#23617a'
 magenta = '#7724dc'
 cyan    = '#33635c'
