--- a/extras/alacritty/themes/light/4/oasis_night_light_4.toml
+++ b/extras/alacritty/themes/light/4/oasis_night_light_4.toml
@@ -11,12 +11,12 @@ background = '#d8c688'
 text = '#4f3f2b'
 
 [colors.cursor]
-cursor = '#544f1c'
-text = '#424242'
+cursor = '#773f0d'
+text = '#e3d7aa'
 
 [colors.vi_mode_cursor]
-cursor = '#76400c'
-text = '#424242'
+cursor = '#734211'
+text = '#e3d7aa'
 
 [colors.normal]
 black   = '#424242'
@@ -29,10 +29,10 @@ cyan    = '#2c554f'
 white   = '#44423b'
 
 [colors.bright]
-black   = '#424242'
+black   = '#48403c'
 red     = '#9d0f0f'
 green   = '#2c5820'
-yellow  = '#76400c'
+yellow  = '#734211'
 blue    = '#1e5369'
 magenta = '#671fbe'
 cyan    = '#2b554e'
