--- a/extras/alacritty/themes/light/4/oasis_rose_light_4.toml
+++ b/extras/alacritty/themes/light/4/oasis_rose_light_4.toml
@@ -11,12 +11,12 @@ background = '#eaa9da'
 text = '#513d4b'
 
 [colors.cursor]
-cursor = '#56501d'
-text = '#434343'
+cursor = '#9f1116'
+text = '#f3ceea'
 
 [colors.vi_mode_cursor]
-cursor = '#77410c'
-text = '#434343'
+cursor = '#754311'
+text = '#f3ceea'
 
 [colors.normal]
 black   = '#434343'
@@ -29,10 +29,10 @@ cyan    = '#2c5650'
 white   = '#45433c'
 
 [colors.bright]
-black   = '#434343'
+black   = '#49413d'
 red     = '#9f0f0f'
 green   = '#2d5921'
-yellow  = '#77410c'
+yellow  = '#754311'
 blue    = '#1e556a'
 magenta = '#681fc1'
 cyan    = '#2c5650'
