--- a/extras/alacritty/themes/light/4/oasis_sol_light_4.toml
+++ b/extras/alacritty/themes/light/4/oasis_sol_light_4.toml
@@ -11,12 +11,12 @@ background = '#eeaaa0'
 text = '#64332a'
 
 [colors.cursor]
-cursor = '#544e1c'
-text = '#414141'
+cursor = '#942023'
+text = '#f5cdc7'
 
 [colors.vi_mode_cursor]
-cursor = '#75400c'
-text = '#414141'
+cursor = '#724111'
+text = '#f5cdc7'
 
 [colors.normal]
 black   = '#414141'
@@ -29,10 +29,10 @@ cyan    = '#2b544f'
 white   = '#43413a'
 
 [colors.bright]
-black   = '#414141'
+black   = '#47403b'
 red     = '#9c0f0f'
 green   = '#2c5720'
-yellow  = '#75400c'
+yellow  = '#724111'
 blue    = '#1e5368'
 magenta = '#661ebd'
 cyan    = '#2b544e'
