--- a/extras/alacritty/themes/light/4/oasis_starlight_light_4.toml
+++ b/extras/alacritty/themes/light/4/oasis_starlight_light_4.toml
@@ -11,12 +11,12 @@ background = '#e5d3ae'
 text = '#524b3b'
 
 [colors.cursor]
-cursor = '#5f5820'
-text = '#4b4b4b'
+cursor = '#125a97'
+text = '#f0e6d1'
 
 [colors.vi_mode_cursor]
-cursor = '#84480d'
-text = '#4b4b4b'
+cursor = '#814a13'
+text = '#f0e6d1'
 
 [colors.normal]
 black   = '#4b4b4b'
@@ -29,10 +29,10 @@ cyan    = '#315f59'
 white   = '#4e4b44'
 
 [colors.bright]
-black   = '#4b4b4b'
+black   = '#524a45'
 red     = '#af1111'
 green   = '#326224'
-yellow  = '#84480d'
+yellow  = '#814a13'
 blue    = '#215e76'
 magenta = '#7322d5'
 cyan    = '#315f58'
