--- a/extras/alacritty/themes/light/4/oasis_twilight_light_4.toml
+++ b/extras/alacritty/themes/light/4/oasis_twilight_light_4.toml
@@ -11,12 +11,12 @@ background = '#b9a9ea'
 text = '#433a5c'
 
 [colors.cursor]
-cursor = '#524c1b'
-text = '#3f3f3f'
+cursor = '#6914ba'
+text = '#d7cef3'
 
 [colors.vi_mode_cursor]
-cursor = '#723e0b'
-text = '#3f3f3f'
+cursor = '#6f4011'
+text = '#d7cef3'
 
 [colors.normal]
 black   = '#3f3f3f'
@@ -29,10 +29,10 @@ cyan    = '#2a524d'
 white   = '#413f39'
 
 [colors.bright]
-black   = '#3f3f3f'
+black   = '#453e3a'
 red     = '#990f0f'
 green   = '#2b551f'
-yellow  = '#723e0b'
+yellow  = '#6f4011'
 blue    = '#1d5166'
 magenta = '#641eb8'
 cyan    = '#2a524c'
