--- a/extras/alacritty/themes/light/5/oasis_abyss_light_5.toml
+++ b/extras/alacritty/themes/light/5/oasis_abyss_light_5.toml
@@ -11,12 +11,12 @@ background = '#ecb893'
 text = '#48413b'
 
 [colors.cursor]
-cursor = '#554f1c'
-text = '#424242'
+cursor = '#981e22'
+text = '#f3d2ba'
 
 [colors.vi_mode_cursor]
-cursor = '#77410c'
-text = '#424242'
+cursor = '#744211'
+text = '#f3d2ba'
 
 [colors.normal]
 black   = '#424242'
@@ -29,10 +29,10 @@ cyan    = '#2c5550'
 white   = '#45433c'
 
 [colors.bright]
-black   = '#424242'
+black   = '#48413d'
 red     = '#9e0f0f'
 green   = '#2c5920'
-yellow  = '#77410c'
+yellow  = '#744211'
 blue    = '#1e546a'
 magenta = '#681fbf'
 cyan    = '#2b564f'
