--- a/extras/alacritty/themes/light/5/oasis_cactus_light_5.toml
+++ b/extras/alacritty/themes/light/5/oasis_cactus_light_5.toml
@@ -11,12 +11,12 @@ background = '#aadebe'
 text = '#3c4d44'
 
 [colors.cursor]
-cursor = '#5c561f'
-text = '#494949'
+cursor = '#375e39'
+text = '#cbebd7'
 
 [colors.vi_mode_cursor]
-cursor = '#81460d'
-text = '#494949'
+cursor = '#7e4813'
+text = '#cbebd7'
 
 [colors.normal]
 black   = '#494949'
@@ -29,10 +29,10 @@ cyan    = '#305d57'
 white   = '#4c4942'
 
 [colors.bright]
-black   = '#494949'
+black   = '#4f4844'
 red     = '#ac1111'
 green   = '#306023'
-yellow  = '#81460d'
+yellow  = '#7e4813'
 blue    = '#215b73'
 magenta = '#7022cf'
 cyan    = '#2f5d56'
