--- a/extras/alacritty/themes/light/5/oasis_canyon_light_5.toml
+++ b/extras/alacritty/themes/light/5/oasis_canyon_light_5.toml
@@ -11,12 +11,12 @@ background = '#ecbd93'
 text = '#52412d'
 
 [colors.cursor]
-cursor = '#56511d'
-text = '#444444'
+cursor = '#7a410d'
+text = '#f3d5ba'
 
 [colors.vi_mode_cursor]
-cursor = '#79420c'
-text = '#444444'
+cursor = '#764311'
+text = '#f3d5ba'
 
 [colors.normal]
 black   = '#444444'
@@ -29,10 +29,10 @@ cyan    = '#2d5752'
 white   = '#46443d'
 
 [colors.bright]
-black   = '#444444'
+black   = '#49433f'
 red     = '#a11010'
 green   = '#2d5a20'
-yellow  = '#79420c'
+yellow  = '#764311'
 blue    = '#1f566c'
 magenta = '#6a20c2'
 cyan    = '#2c5750'
