--- a/extras/alacritty/themes/light/5/oasis_lagoon_light_5.toml
+++ b/extras/alacritty/themes/light/5/oasis_lagoon_light_5.toml
@@ -11,12 +11,12 @@ background = '#94beef'
 text = '#30405b'
 
 [colors.cursor]
-cursor = '#524d1b'
-text = '#404040'
+cursor = '#104d84'
+text = '#bcd6f5'
 
 [colors.vi_mode_cursor]
-cursor = '#733e0b'
-text = '#404040'
+cursor = '#704010'
+text = '#bcd6f5'
 
 [colors.normal]
 black   = '#404040'
@@ -29,10 +29,10 @@ cyan    = '#2b524d'
 white   = '#413f39'
 
 [colors.bright]
-black   = '#404040'
+black   = '#453e3a'
 red     = '#990f0f'
 green   = '#2a551f'
-yellow  = '#733e0b'
+yellow  = '#704010'
 blue    = '#1d5166'
 magenta = '#641eb8'
 cyan    = '#2a534c'
