--- a/extras/alacritty/themes/light/5/oasis_midnight_light_5.toml
+++ b/extras/alacritty/themes/light/5/oasis_midnight_light_5.toml
@@ -11,12 +11,12 @@ background = '#ecb193'
 text = '#473f3a'
 
 [colors.cursor]
-cursor = '#534d1b'
-text = '#404040'
+cursor = '#912125'
+text = '#f3cdba'
 
 [colors.vi_mode_cursor]
-cursor = '#743f0b'
-text = '#404040'
+cursor = '#714011'
+text = '#f3cdba'
 
 [colors.normal]
 black   = '#404040'
@@ -29,10 +29,10 @@ cyan    = '#2b534e'
 white   = '#42403a'
 
 [colors.bright]
-black   = '#404040'
+black   = '#463f3b'
 red     = '#9a0f0f'
 green   = '#2b561f'
-yellow  = '#743f0b'
+yellow  = '#714011'
 blue    = '#1e5267'
 magenta = '#651fba'
 cyan    = '#2a534d'
