--- a/extras/alacritty/themes/light/5/oasis_mirage_light_5.toml
+++ b/extras/alacritty/themes/light/5/oasis_mirage_light_5.toml
@@ -11,12 +11,12 @@ background = '#9aeae4'
 text = '#3c5050'
 
 [colors.cursor]
-cursor = '#605a20'
-text = '#4c4c4c'
+cursor = '#31605a'
+text = '#c0f2ee'
 
 [colors.vi_mode_cursor]
-cursor = '#86490d'
-text = '#4c4c4c'
+cursor = '#834b13'
+text = '#c0f2ee'
 
 [colors.normal]
 black   = '#4c4c4c'
@@ -29,10 +29,10 @@ cyan    = '#32605a'
 white   = '#4e4c44'
 
 [colors.bright]
-black   = '#4c4c4c'
+black   = '#524b46'
 red     = '#b11111'
 green   = '#316424'
-yellow  = '#86490d'
+yellow  = '#834b13'
 blue    = '#225f77'
 magenta = '#7423d6'
 cyan    = '#316159'
