--- a/extras/alacritty/themes/light/5/oasis_night_light_5.toml
+++ b/extras/alacritty/themes/light/5/oasis_night_light_5.toml
@@ -11,12 +11,12 @@ background = '#d5bd81'
 text = '#4b3b28'
 
 [colors.cursor]
-cursor = '#504b1a'
-text = '#3e3e3e'
+cursor = '#713c0c'
+text = '#e0cfa3'
 
 [colors.vi_mode_cursor]
-cursor = '#6f3d0b'
-text = '#3e3e3e'
+cursor = '#6d3e10'
+text = '#e0cfa3'
 
 [colors.normal]
 black   = '#3e3e3e'
@@ -29,10 +29,10 @@ cyan    = '#29504b'
 white   = '#3f3d37'
 
 [colors.bright]
-black   = '#3e3e3e'
+black   = '#423c39'
 red     = '#950e0e'
 green   = '#29531e'
-yellow  = '#6f3d0b'
+yellow  = '#6d3e10'
 blue    = '#1d4f63'
 magenta = '#621eb4'
 cyan    = '#29504a'
