--- a/extras/alacritty/themes/light/5/oasis_rose_light_5.toml
+++ b/extras/alacritty/themes/light/5/oasis_rose_light_5.toml
@@ -11,12 +11,12 @@ background = '#e79dd9'
 text = '#4a3845'
 
 [colors.cursor]
-cursor = '#4f4a1a'
-text = '#3d3d3d'
+cursor = '#941015'
+text = '#f0c2e7'
 
 [colors.vi_mode_cursor]
-cursor = '#6f3c0b'
-text = '#3d3d3d'
+cursor = '#6d3e10'
+text = '#f0c2e7'
 
 [colors.normal]
 black   = '#3d3d3d'
@@ -29,10 +29,10 @@ cyan    = '#29504b'
 white   = '#3f3d37'
 
 [colors.bright]
-black   = '#3d3d3d'
+black   = '#423c38'
 red     = '#940e0e'
 green   = '#29531e'
-yellow  = '#6f3c0b'
+yellow  = '#6d3e10'
 blue    = '#1c4f63'
 magenta = '#611db3'
 cyan    = '#29504a'
