--- a/extras/alacritty/themes/light/5/oasis_sol_light_5.toml
+++ b/extras/alacritty/themes/light/5/oasis_sol_light_5.toml
@@ -11,12 +11,12 @@ background = '#ec9b93'
 text = '#5b2e26'
 
 [colors.cursor]
-cursor = '#4c4719'
-text = '#3a3a3a'
+cursor = '#871f20'
+text = '#f3bfba'
 
 [colors.vi_mode_cursor]
-cursor = '#6b3a0b'
-text = '#3a3a3a'
+cursor = '#683b0f'
+text = '#f3bfba'
 
 [colors.normal]
 black   = '#3a3a3a'
@@ -29,10 +29,10 @@ cyan    = '#284d48'
 white   = '#3c3a34'
 
 [colors.bright]
-black   = '#3a3a3a'
+black   = '#3f3936'
 red     = '#8f0e0e'
 green   = '#274f1d'
-yellow  = '#6b3a0b'
+yellow  = '#683b0f'
 blue    = '#1b4b5f'
 magenta = '#5d1cac'
 cyan    = '#274d47'
