--- a/extras/alacritty/themes/light/5/oasis_starlight_light_5.toml
+++ b/extras/alacritty/themes/light/5/oasis_starlight_light_5.toml
@@ -11,12 +11,12 @@ background = '#eccb93'
 text = '#4d4738'
 
 [colors.cursor]
-cursor = '#5b551e'
-text = '#474747'
+cursor = '#125592'
+text = '#f3deba'
 
 [colors.vi_mode_cursor]
-cursor = '#7e450d'
-text = '#474747'
+cursor = '#7c4712'
+text = '#f3deba'
 
 [colors.normal]
 black   = '#474747'
@@ -29,10 +29,10 @@ cyan    = '#2f5b55'
 white   = '#4a4740'
 
 [colors.bright]
-black   = '#474747'
+black   = '#4d4642'
 red     = '#a81010'
 green   = '#2f5e22'
-yellow  = '#7e450d'
+yellow  = '#7c4712'
 blue    = '#205a71'
 magenta = '#6e21cb'
 cyan    = '#2e5b54'
