--- a/extras/alacritty/themes/light/5/oasis_twilight_light_5.toml
+++ b/extras/alacritty/themes/light/5/oasis_twilight_light_5.toml
@@ -11,12 +11,12 @@ background = '#aa9de7'
 text = '#3b3351'
 
 [colors.cursor]
-cursor = '#4a4518'
-text = '#383838'
+cursor = '#6012a9'
+text = '#cac2f0'
 
 [colors.vi_mode_cursor]
-cursor = '#67380a'
-text = '#383838'
+cursor = '#653a0f'
+text = '#cac2f0'
 
 [colors.normal]
 black   = '#383838'
@@ -29,10 +29,10 @@ cyan    = '#264a46'
 white   = '#393832'
 
 [colors.bright]
-black   = '#383838'
+black   = '#3c3733'
 red     = '#8a0d0d'
 green   = '#264d1c'
-yellow  = '#67380a'
+yellow  = '#653a0f'
 blue    = '#1a495c'
 magenta = '#5a1ba6'
 cyan    = '#264a45'
