--- a/extras/alacritty/themes/dark/oasis_abyss_dark.toml
+++ b/extras/alacritty/themes/dark/oasis_abyss_dark.toml
@@ -7,7 +7,7 @@ background = '#000000'
 foreground = '#F0EBE6'
 
 [colors.selection]
-background = '#5A3824'
+background = '#532E2E'
 text = '#F0EBE6'
 
 [colors.cursor]
@@ -15,11 +15,11 @@ cursor = '#F0E68C'
 text = '#000000'
 
 [colors.vi_mode_cursor]
-cursor = '#FFA247'
+cursor = '#F8B471'
 text = '#000000'
 
 [colors.normal]
-black   = '#000000'
+black   = '#101010'
 red     = '#D06666'
 green   = '#53D390'
 yellow  = '#F0E68C'
@@ -29,10 +29,10 @@ cyan    = '#5ABAAE'
 white   = '#DDDBD5'
 
 [colors.bright]
-black   = '#666666'
+black   = '#504641'
 red     = '#FFA0A0'
 green   = '#96EA7F'
-yellow  = '#FFA247'
+yellow  = '#F8B471'
 blue    = '#87CEEB'
 magenta = '#D2ADFF'
 cyan    = '#8FD1C7'
