--- a/extras/alacritty/themes/dark/oasis_night_dark.toml
+++ b/extras/alacritty/themes/dark/oasis_night_dark.toml
@@ -12,14 +12,14 @@ text = '#F7F4E9'
 
 [colors.cursor]
 cursor = '#F0E68C'
-text = '#000000'
+text = '#0D0D1A'
 
 [colors.vi_mode_cursor]
-cursor = '#FFA247'
-text = '#000000'
+cursor = '#F8B471'
+text = '#0D0D1A'
 
 [colors.normal]
-black   = '#000000'
+black   = '#101010'
 red     = '#D06666'
 green   = '#53D390'
 yellow  = '#F0E68C'
@@ -29,10 +29,10 @@ cyan    = '#5ABAAE'
 white   = '#DDDBD5'
 
 [colors.bright]
-black   = '#666666'
+black   = '#504641'
 red     = '#FFA0A0'
 green   = '#96EA7F'
-yellow  = '#FFA247'
+yellow  = '#F8B471'
 blue    = '#87CEEB'
 magenta = '#D2ADFF'
 cyan    = '#8FD1C7'
