--- a/extras/alacritty/themes/light/1/oasis_lagoon_light_1.toml
+++ b/extras/alacritty/themes/light/1/oasis_lagoon_light_1.toml
@@ -11,12 +11,12 @@ background = '#dde3e9'
 text = '#40577a'
 
 [colors.cursor]
-cursor = '#6a6423'
-text = '#565656'
+cursor = '#1665aa'
+text = '#f9fafb'
 
 [colors.vi_mode_cursor]
-cursor = '#95510e'
-text = '#565656'
+cursor = '#915315'
+text = '#f9fafb'
 
 [colors.normal]
 black   = '#565656'
@@ -29,10 +29,10 @@ cyan    = '#386b64'
 white   = '#59564e'
 
 [colors.bright]
-black   = '#565656'
+black   = '#5d554e'
 red     = '#c41414'
 green   = '#376f28'
-yellow  = '#95510e'
+yellow  = '#915315'
 blue    = '#266a86'
 magenta = '#8033de'
 cyan    = '#366c63'
