--- a/extras/alacritty/themes/light/1/oasis_midnight_light_1.toml
+++ b/extras/alacritty/themes/light/1/oasis_midnight_light_1.toml
@@ -11,12 +11,12 @@ background = '#e8dcd8'
 text = '#5c534c'
 
 [colors.cursor]
-cursor = '#696223'
-text = '#545454'
+cursor = '#b7292e'
+text = '#f9f6f5'
 
 [colors.vi_mode_cursor]
-cursor = '#92500e'
-text = '#545454'
+cursor = '#8e5215'
+text = '#f9f6f5'
 
 [colors.normal]
 black   = '#545454'
@@ -29,10 +29,10 @@ cyan    = '#376962'
 white   = '#57544c'
 
 [colors.bright]
-black   = '#545454'
+black   = '#5b534d'
 red     = '#c11313'
 green   = '#366d27'
-yellow  = '#92500e'
+yellow  = '#8e5215'
 blue    = '#266783'
 magenta = '#7e30dd'
 cyan    = '#356a61'
