--- a/extras/alacritty/themes/light/1/oasis_night_light_1.toml
+++ b/extras/alacritty/themes/light/1/oasis_night_light_1.toml
@@ -11,12 +11,12 @@ background = '#cfc7af'
 text = '#52422d'
 
 [colors.cursor]
-cursor = '#57511d'
-text = '#444444'
+cursor = '#7b410d'
+text = '#e0dbcc'
 
 [colors.vi_mode_cursor]
-cursor = '#7a420c'
-text = '#444444'
+cursor = '#764412'
+text = '#e0dbcc'
 
 [colors.normal]
 black   = '#444444'
@@ -29,10 +29,10 @@ cyan    = '#2d5852'
 white   = '#47443e'
 
 [colors.bright]
-black   = '#444444'
+black   = '#4a433e'
 red     = '#a21010'
 green   = '#2d5b20'
-yellow  = '#7a420c'
+yellow  = '#764412'
 blue    = '#1f566d'
 magenta = '#6a20c4'
 cyan    = '#2c5851'
