--- a/extras/alacritty/themes/light/1/oasis_starlight_light_1.toml
+++ b/extras/alacritty/themes/light/1/oasis_starlight_light_1.toml
@@ -11,12 +11,12 @@ background = '#e8e0d8'
 text = '#5c5442'
 
 [colors.cursor]
-cursor = '#696223'
-text = '#555555'
+cursor = '#1563a7'
+text = '#f9f7f5'
 
 [colors.vi_mode_cursor]
-cursor = '#93500e'
-text = '#555555'
+cursor = '#8f5215'
+text = '#f9f7f5'
 
 [colors.normal]
 black   = '#555555'
@@ -29,10 +29,10 @@ cyan    = '#376a62'
 white   = '#58554c'
 
 [colors.bright]
-black   = '#555555'
+black   = '#5c534d'
 red     = '#c21313'
 green   = '#366d27'
-yellow  = '#93500e'
+yellow  = '#8f5215'
 blue    = '#266884'
 magenta = '#7f31de'
 cyan    = '#356a62'
