--- a/extras/alacritty/themes/light/2/oasis_desert_light_2.toml
+++ b/extras/alacritty/themes/light/2/oasis_desert_light_2.toml
@@ -11,12 +11,12 @@ background = '#eedac3'
 text = '#5f4e3b'
 
 [colors.cursor]
-cursor = '#655f22'
-text = '#515151'
+cursor = '#695e19'
+text = '#f8f0e7'
 
 [colors.vi_mode_cursor]
-cursor = '#8d4d0e'
-text = '#515151'
+cursor = '#8a4f14'
+text = '#f8f0e7'
 
 [colors.normal]
 black   = '#515151'
@@ -29,10 +29,10 @@ cyan    = '#356660'
 white   = '#545149'
 
 [colors.bright]
-black   = '#515151'
+black   = '#58504a'
 red     = '#bb1313'
 green   = '#356926'
-yellow  = '#8d4d0e'
+yellow  = '#8a4f14'
 blue    = '#24647e'
 magenta = '#7a2bdc'
 cyan    = '#34665f'
