--- a/extras/alacritty/themes/light/2/oasis_dune_light_2.toml
+++ b/extras/alacritty/themes/light/2/oasis_dune_light_2.toml
@@ -11,12 +11,12 @@ background = '#eee5c9'
 text = '#57544b'
 
 [colors.cursor]
-cursor = '#686123'
-text = '#545454'
+cursor = '#6b611a'
+text = '#f9f6ec'
 
 [colors.vi_mode_cursor]
-cursor = '#914f0e'
-text = '#545454'
+cursor = '#8e5115'
+text = '#f9f6ec'
 
 [colors.normal]
 black   = '#545454'
@@ -29,10 +29,10 @@ cyan    = '#366963'
 white   = '#57544b'
 
 [colors.bright]
-black   = '#545454'
+black   = '#5b534c'
 red     = '#c01313'
 green   = '#366c27'
-yellow  = '#914f0e'
+yellow  = '#8e5115'
 blue    = '#256782'
 magenta = '#7e30dd'
 cyan    = '#356961'
