--- a/extras/alacritty/themes/light/2/oasis_lagoon_light_2.toml
+++ b/extras/alacritty/themes/light/2/oasis_lagoon_light_2.toml
@@ -11,12 +11,12 @@ background = '#c8d8ee'
 text = '#3d5273'
 
 [colors.cursor]
-cursor = '#655e22'
-text = '#515151'
+cursor = '#135fa2'
+text = '#ebf1f9'
 
 [colors.vi_mode_cursor]
-cursor = '#8d4d0e'
-text = '#515151'
+cursor = '#894f14'
+text = '#ebf1f9'
 
 [colors.normal]
 black   = '#515151'
@@ -29,10 +29,10 @@ cyan    = '#346560'
 white   = '#535148'
 
 [colors.bright]
-black   = '#515151'
+black   = '#574f49'
 red     = '#ba1313'
 green   = '#346926'
-yellow  = '#8d4d0e'
+yellow  = '#894f14'
 blue    = '#24647e'
 magenta = '#7a2adc'
 cyan    = '#34655e'
