--- a/extras/alacritty/themes/light/2/oasis_night_light_2.toml
+++ b/extras/alacritty/themes/light/2/oasis_night_light_2.toml
@@ -11,12 +11,12 @@ background = '#decd96'
 text = '#54432d'
 
 [colors.cursor]
-cursor = '#59531e'
-text = '#464646'
+cursor = '#7e430e'
+text = '#e9deb9'
 
 [colors.vi_mode_cursor]
-cursor = '#7c440c'
-text = '#464646'
+cursor = '#794512'
+text = '#e9deb9'
 
 [colors.normal]
 black   = '#464646'
@@ -29,10 +29,10 @@ cyan    = '#2e5955'
 white   = '#48463f'
 
 [colors.bright]
-black   = '#464646'
+black   = '#4c4540'
 red     = '#a51111'
 green   = '#2e5c22'
-yellow  = '#7c440c'
+yellow  = '#794512'
 blue    = '#20586f'
 magenta = '#6c21c8'
 cyan    = '#2e5a53'
