--- a/extras/alacritty/themes/light/3/oasis_desert_light_3.toml
+++ b/extras/alacritty/themes/light/3/oasis_desert_light_3.toml
@@ -11,12 +11,12 @@ background = '#f0d1ad'
 text = '#5a4a38'
 
 [colors.cursor]
-cursor = '#615a20'
-text = '#4d4d4d'
+cursor = '#645918'
+text = '#f7e7d4'
 
 [colors.vi_mode_cursor]
-cursor = '#86490d'
-text = '#4d4d4d'
+cursor = '#834b14'
+text = '#f7e7d4'
 
 [colors.normal]
 black   = '#4d4d4d'
@@ -29,10 +29,10 @@ cyan    = '#32615b'
 white   = '#504d45'
 
 [colors.bright]
-black   = '#4d4d4d'
+black   = '#534c46'
 red     = '#b21212'
 green   = '#326424'
-yellow  = '#86490d'
+yellow  = '#834b14'
 blue    = '#225f77'
 magenta = '#7523d8'
 cyan    = '#31615a'
