--- a/extras/alacritty/themes/light/3/oasis_lagoon_light_3.toml
+++ b/extras/alacritty/themes/light/3/oasis_lagoon_light_3.toml
@@ -11,12 +11,12 @@ background = '#b3cbef'
 text = '#384b68'
 
 [colors.cursor]
-cursor = '#5d571f'
-text = '#4a4a4a'
+cursor = '#125895'
+text = '#d9e5f7'
 
 [colors.vi_mode_cursor]
-cursor = '#82470d'
-text = '#4a4a4a'
+cursor = '#7e4813'
+text = '#d9e5f7'
 
 [colors.normal]
 black   = '#4a4a4a'
@@ -29,10 +29,10 @@ cyan    = '#315d58'
 white   = '#4d4a42'
 
 [colors.bright]
-black   = '#4a4a4a'
+black   = '#504843'
 red     = '#ac1111'
 green   = '#306023'
-yellow  = '#82470d'
+yellow  = '#7e4813'
 blue    = '#215c74'
 magenta = '#7122d1'
 cyan    = '#2f5d57'
