--- a/extras/alacritty/themes/light/4/oasis_cactus_light_4.toml
+++ b/extras/alacritty/themes/light/4/oasis_cactus_light_4.toml
@@ -11,12 +11,12 @@ background = '#b4e4c8'
 text = '#405147'
 
 [colors.cursor]
-cursor = '#615a20'
-text = '#4d4d4d'
+cursor = '#3a623c'
+text = '#d6f0e1'
 
 [colors.vi_mode_cursor]
-cursor = '#874a0d'
-text = '#4d4d4d'
+cursor = '#844b14'
+text = '#d6f0e1'
 
 [colors.normal]
 black   = '#4d4d4d'
@@ -29,10 +29,10 @@ cyan    = '#32615b'
 white   = '#504d45'
 
 [colors.bright]
-black   = '#4d4d4d'
+black   = '#544b46'
 red     = '#b31111'
 green   = '#326425'
-yellow  = '#874a0d'
+yellow  = '#844b14'
 blue    = '#226078'
 magenta = '#7523d9'
 cyan    = '#32615a'
