--- a/extras/alacritty/themes/light/4/oasis_lagoon_light_4.toml
+++ b/extras/alacritty/themes/light/4/oasis_lagoon_light_4.toml
@@ -11,12 +11,12 @@ background = '#a1c2f1'
 text = '#334561'
 
 [colors.cursor]
-cursor = '#57511d'
-text = '#444444'
+cursor = '#11528a'
+text = '#c9dcf7'
 
 [colors.vi_mode_cursor]
-cursor = '#79420c'
-text = '#444444'
+cursor = '#764312'
+text = '#c9dcf7'
 
 [colors.normal]
 black   = '#444444'
@@ -29,10 +29,10 @@ cyan    = '#2d5751'
 white   = '#46443d'
 
 [colors.bright]
-black   = '#444444'
+black   = '#4a423e'
 red     = '#a11010'
 green   = '#2d5a21'
-yellow  = '#79420c'
+yellow  = '#764312'
 blue    = '#1f566c'
 magenta = '#691fc3'
 cyan    = '#2c5751'
