--- a/extras/alacritty/themes/light/4/oasis_midnight_light_4.toml
+++ b/extras/alacritty/themes/light/4/oasis_midnight_light_4.toml
@@ -11,12 +11,12 @@ background = '#eebda0'
 text = '#4d443e'
 
 [colors.cursor]
-cursor = '#59531e'
-text = '#464646'
+cursor = '#9b2427'
+text = '#f5d8c7'
 
 [colors.vi_mode_cursor]
-cursor = '#7c440c'
-text = '#464646'
+cursor = '#794512'
+text = '#f5d8c7'
 
 [colors.normal]
 black   = '#464646'
@@ -29,10 +29,10 @@ cyan    = '#2e5953'
 white   = '#48463f'
 
 [colors.bright]
-black   = '#464646'
+black   = '#4c4440'
 red     = '#a51010'
 green   = '#2e5c22'
-yellow  = '#7c440c'
+yellow  = '#794512'
 blue    = '#1f586f'
 magenta = '#6c20c8'
 cyan    = '#2e5953'
