--- a/extras/alacritty/themes/light/5/oasis_dune_light_5.toml
+++ b/extras/alacritty/themes/light/5/oasis_dune_light_5.toml
@@ -11,12 +11,12 @@ background = '#e1cfa4'
 text = '#4a4940'
 
 [colors.cursor]
-cursor = '#5b551e'
-text = '#484848'
+cursor = '#5e5517'
+text = '#ece1c6'
 
 [colors.vi_mode_cursor]
-cursor = '#80460d'
-text = '#484848'
+cursor = '#7d4712'
+text = '#ece1c6'
 
 [colors.normal]
 black   = '#484848'
@@ -29,10 +29,10 @@ cyan    = '#305c56'
 white   = '#4a4841'
 
 [colors.bright]
-black   = '#484848'
+black   = '#4e4743'
 red     = '#aa1111'
 green   = '#2f5f22'
-yellow  = '#80460d'
+yellow  = '#7d4712'
 blue    = '#215b72'
 magenta = '#6f22cd'
 cyan    = '#2f5c55'
